@@ -1357,7 +1357,7 @@ BEGIN
     CONTROL         "",IDC_MEMORY,"PhHexEdit",WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP,7,7,427,239
     PUSHBUTTON      "Re-read",IDC_REREAD,7,248,50,14
     PUSHBUTTON      "Write",IDC_WRITE,60,248,50,14
-    PUSHBUTTON      "Goto...",IDC_GOTO,112,248,50,14
+    PUSHBUTTON      "Go To...",IDC_GOTO,112,248,50,14
     PUSHBUTTON      "Save...",IDC_SAVE,331,248,50,14
     PUSHBUTTON      "Close",IDOK,384,248,50,14
 END
